# voicebot-orchestrator

./: .env.example  .gitignore  CLEAN_STRUCTURE.md  Dockerfile  ENHANCED_CLI_SUMMARY.md  ENHANCED_SERVICES_GUIDE.md  ENHANCED_TTS_COMPLETION_SUMMARY.md  GITHUB_UPLOAD_INSTRUCTIONS.md  HOW_TO_RUN.md  INDEPENDENT_SERVICES_GUIDE.md  LICENSE  LOCAL_DEVELOPMENT_GUIDE.md  MICROPHONE_TESTING_GUIDE.md  MODULAR_CLI_SUMMARY.md  README.md  SPRINT1_COMPLETE.md  SPRINT2_COMPLETE.md  SPRINT5_IMPLEMENTATION_SUMMARY.md  SPRINT6_REQUIREMENTS_VERIFICATION.md  STREAMING_TTS_ARCHITECTURE.md  ZONOS_TTS_PORT_SOLUTION.md  accuracy_enhanced_llm.py  advanced_gpu_cleanup.py  analytics_export_1756366597.csv  breakthrough_accuracy_llm.py  check_gpu_tortoise.py  cleanup_memory.py  cleanup_root.py  cli_demo_results.json  comprehensive_ws_launcher.py  debug_script_matching.py  debug_service_detection.py  debug_sprint3.py  debug_stt_direct.py  debug_stt_routing.py  debug_stt_service_detection.py  debug_tortoise_gpu.py  debug_tts_request.py  debug_tts_synthesis.py  demo_voice_interface.py  (+153 more)
Prompts/: Sprint 1.txt  Sprint3.txt  Sprint4.txt  Sprint6.txt
adapters/banking-lora/: adapter_config.json  adapter_metadata.json
adapters/test-banking/: adapter_metadata.json
aws_microservices/: DEPLOYMENT_GUIDE.md  Dockerfile.gpt_llm  Dockerfile.hira_dia_tts  Dockerfile.kokoro_tts  Dockerfile.llm  Dockerfile.mistral_llm  Dockerfile.stt  Dockerfile.tts  ENHANCED_DISPLAY_FIXES.md  conversation_manager.py  docker-compose.independent.yml  docker-compose.local.yml  enhanced_service_manager.py  independent_local_runner.py  independent_orchestrator.py  llm_gpt_service.py  llm_mistral_service.py  llm_service.py  local_runner.py  orchestrator_client.py  orchestrator_utils.py  prompt_loader.py  requirements-llm.txt  requirements-orchestrator.txt  requirements-stt.txt  requirements-tts.txt  stt_service.py  stt_whisper_service.py  test_description_order.py  test_dia_4bit_improvements.py  test_direct_dia_4bit.py  test_efficient_combo.py  test_enhanced_display.py  test_individual_services.py  test_reordered_services.py  test_service_names.py  test_strict_mode.py  tts_dia_4bit_service.py  tts_hira_dia_service.py  tts_hira_dia_unified_service.py  (+19 more)
aws_microservices/terraform/: main.tf  user_data_llm.sh  user_data_stt.sh  user_data_tts.sh
backups/orchestrator_backup_config_20250829_171254/: pyproject.toml
backups/orchestrator_backup_config_20250829_175257/: requirements.txt
cache/: eligibility.json  prompt.txt  semantic_cache.json
demos/: cli_demo_comparison.py  cli_enterprise_demo.py  production_conversation_demo.py  production_voice_test.py  sprint6_demo.py  voice_test.py
docs/: CLI_DEMO_GUIDE.md  CLI_SYSTEMS_OVERVIEW.md  COMPLIANCE_REVIEW.md  DATETIME_FORMAT_IMPLEMENTATION.md  DEMO_TYPES_COMPARISON.md  ENHANCED_MEMORY_CLEANUP.md  ENTERPRISE_CLI_FEATURES.md  INDEPENDENT_SERVICES_GUIDE.md  LLM_PROMPT_INJECTION_SYSTEM.md  SERVICE_MANAGEMENT_SUMMARY.md  SERVICE_STARTUP_GUIDE.md  STREAMING_TTS_COMPLETE.md  TTS_PERFORMANCE_OPTIMIZATION_GUIDE.md  TTS_VOICE_CLONING_ANALYSIS.md  VOICE_LIBRARIES_EXPLAINED.md  VOICE_NAMING_UPDATE_COMPLETE.md
docs/prompts/: customer-service.txt  inbound-call.txt  outbound-call.txt  prompt-main.txt
examples/: service_lifecycle_test.py  service_startup_example.py
k8s/: orchestrator-core.yaml
scripts/: README.md
scripts/batch/: fix_zonos_tts.bat  start_zonos_tts_only.bat
sessions/: test-session.json
sprints/: SPRINT3_COMPLETE.md  SPRINT3_FINAL_SUMMARY.md  SPRINT6_SUMMARY.md
tests/: conftest.py  debug_af_bella.py  demo_dual_tts.py  faster_whisper_stt.py  generate_af_bella.py  generate_female_voices.py  production_tts_strategy.py  real_llm.py  real_stt.py  run_tests.py  run_tts_llm_tests.bat  simple_clarity_test.py  test_audio_format.py  test_enhanced_llm.py  test_enhanced_voice_conversation.py  test_fast_tts.py  test_full_voice_conversation.py  test_george.py  test_independent_combinations.py  test_integration.py  test_interactive_pipeline.py  test_llm.py  test_nari_conversation.py  test_nari_cpu.py  test_nari_cuda.py  test_nari_dia_comparison.py  test_nari_female_voice.py  test_nari_persistent.py  test_nari_proper.py  test_nari_quick.py  test_persistent_tts.py  test_real_kokoro.py  test_real_stt.py  test_running_services_pipeline.py  test_session_manager.py  test_simple_kokoro.py  test_simple_voice_conversation.py  test_sprint3.py  test_sprint3_simple.py  test_sprint4.py  (+13 more)
voicebot_orchestrator/: __init__.py  advanced_tts_features.py  analytics.py  audio_utils.py  clean_zonos_tts.py  cli.py  compliance.py  config.py  datetime_utils.py  enhanced_cli.py  enhanced_cli_clean.py  enhanced_llm.py  enhanced_session.py  enhanced_tts_manager.py  enhanced_tts_manager_backup.py  enhanced_tts_manager_clean.py  enhanced_tts_manager_dual.py  llm.py  loan.py  lora_adapter.py  main.py  metrics.py  modular_cli.py  ollama_enhanced_llm.py  payment_plan.py  real_kokoro_tts.py  real_whisper_stt.py  real_zonos_tts.py  semantic_cache.py  session_manager.py  simple_clean_zonos_tts.py  sprint3_cli.py  sprint3_cli_fixed.py  sprint3_cli_old.py  sprint4_cli.py  sprint5_cli.py  sprint6_cli.py  streaming_tts.py  stt.py  tts.py  (+4 more)
(+99 files in other folders)
